--- a/angular.json
+++ b/angular.json
@@ -10,6 +10,7 @@
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
+        
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
@@ -21,7 +22,8 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/manifest.json"
             ],
             "styles": [
               "src/styles.css"
@@ -55,7 +57,9 @@
                   "maximumWarning": "6kb",
                   "maximumError": "10kb"
                 }
-              ]
+              ],
+              "serviceWorker": true,
+              "ngswConfigPath": "ngsw-config.json"
             }
           }
         },
@@ -66,7 +70,8 @@
           },
           "configurations": {
             "production": {
-              "browserTarget": "vehicle-info:build:production"
+              "browserTarget": "vehicle-info:build:production",
+              "proxyConfig": "src/proxy.conf.json"
             }
           }
         },
@@ -85,7 +90,8 @@
             "karmaConfig": "karma.conf.js",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/manifest.webmanifest"
             ],
             "styles": [
               "src/styles.css"
@@ -119,6 +125,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "vehicle-info"
+    }
+  },
+  "defaultProject": "vehicle-info",
+  "cli": {
+    "analytics": "88905e11-411e-426c-827c-95bf78b1ec59"
+  }
 }
